kubernetes/ingress/ingress.yml
#kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.0.0/deploy/static/provider/baremetal/deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /operate
            pathType: Prefix
            backend:
              service:
                name: service-integration
                port:
                  number: 8093
          - path: /division
            pathType: Prefix
            backend:
              service:
                name: service-division
                port:
                  number: 8081
          - path: /multiply
            pathType: Prefix
            backend:
              service:
                name: service-multiply
                port:
                  number: 8082
